[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["keta4 <82580781+keta4@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pyproject-flake8 = "^0.0.1-alpha.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
)
'''

[tool.flake8]
max-line-length = 88
ignore = "E203,W503,W504,F401,E231,E501,E402,F841,E302,E305,E266"
max-complexity = 10

